# passman

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  skill.md
.github/workflows/: release.yml
app/: index.html  package-lock.json  package.json
app/src/: App.css  App.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: Sidebar.tsx
app/src/pages/: AuditLog.tsx  CredentialEditor.tsx  PolicyEditor.tsx  Settings.tsx  UnlockPage.tsx  VaultBrowser.tsx
bins/passman-mcp-server/: Cargo.toml
bins/passman-mcp-server/src/: main.rs
crates/passman-mcp/: Cargo.toml
crates/passman-mcp/src/: lib.rs  policy.rs  server.rs
crates/passman-mcp/src/tools/: discovery.rs  http.rs  mod.rs  smtp.rs  sql.rs  ssh.rs  storage.rs  vault.rs
crates/passman-proxy/: Cargo.toml
crates/passman-proxy/src/: http.rs  lib.rs  sanitizer.rs  smtp.rs  sql.rs  ssh.rs
crates/passman-types/: Cargo.toml
crates/passman-types/src/: lib.rs
crates/passman-vault/: Cargo.toml
crates/passman-vault/src/: audit.rs  credential.rs  crypto.rs  lib.rs  storage.rs  watcher.rs
crates/passman-vault/tests/: lifecycle.rs
docs/: documentation.html  index.html
scripts/: build.sh
