[package]
name = "passman-gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "passman_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
passman-types = { path = "../../crates/passman-types" }
passman-vault = { path = "../../crates/passman-vault" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
which = "7"
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1"
tar = "0.4"
