[package]
name = "passman-vault"
version.workspace = true
edition.workspace = true

[dependencies]
passman-types = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
fd-lock = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }

[dev-dependencies]
tempfile = "3"
